# matching-engine-benchmark

./: .gitignore  CMakeLists.txt  CONSENSUS_CONFORMING_ENGINES.md  CORRECTNESS_FINDINGS.md  INDUSTRY_AUTHORED_ENGINES.md  LLM_INSTRUCTIONS.md  Makefile  NON_CONFORMING_ENGINES.md  README.md  RESOLVED_FINDINGS.md  SNAPSHOTS.md  discoveries.md
adapters/: HarnessExchangeCore.java  exchange_core_adapter.cpp  liquibook_adapter.cpp  quantcup_adapter.cpp
additional_references/: README.md
additional_references/asthamishra_adapter/: README.md  asthamishra_adapter.rs  build.sh
additional_references/asthamishra_adapter/wrapper/: Cargo.toml
additional_references/brprojects_adapter/: README.md  brprojects_adapter.cpp  build.sh
additional_references/cointossx_adapter/: HarnessCoinTossX.java  README.md  build.sh  cointossx_adapter.cpp
additional_references/coralme_adapter/: HarnessCoralMe.java  README.md  build.sh  coralme_adapter.cpp
additional_references/cpp_orderbook_adapter/: README.md  build.sh  cpp_orderbook_adapter.cpp
additional_references/cpptrader_adapter/: README.md  build.sh  cpptrader_adapter.cpp
additional_references/danielgatis_adapter/: README.md  build.sh
additional_references/danielgatis_adapter/wrapper/: go.mod  go.sum  wrapper.go
additional_references/darkpool_adapter/: README.md  build.sh  darkpool_adapter.cpp
additional_references/dgtony_adapter/: README.md  build.sh  dgtony_adapter.rs
additional_references/dgtony_adapter/wrapper/: Cargo.toml
additional_references/dyn4mik3_adapter/: README.md  build.sh  dyn4mik3_adapter.cpp  dyn4mik3_driver.py
additional_references/fasenderos_adapter/: README.md  build.sh  crypto_stub.js  entry.js  fasenderos_adapter.cpp
additional_references/femtogo_adapter/: README.md  build.sh
additional_references/femtogo_adapter/wrapper/: .gitignore  go.mod  wrapper.go
additional_references/fmstephe_adapter/: README.md  build.sh
additional_references/fmstephe_adapter/wrapper/: go.mod  wrapper.go
additional_references/geseq_adapter/: README.md  build.sh
additional_references/geseq_adapter/wrapper/: go.mod  go.sum  wrapper.go
additional_references/gocronx_adapter/: README.md  build.sh  gocronx_adapter.rs
additional_references/gocronx_adapter/wrapper/: Cargo.toml
additional_references/gotrader_adapter/: README.md  build.sh
additional_references/gotrader_adapter/cmd/meadapter/: wrapper.go
additional_references/hroptatyr_clob_adapter/: README.md  build.sh  hroptatyr_clob_adapter.c
additional_references/i25959341_adapter/: README.md  build.sh
additional_references/i25959341_adapter/wrapper/: go.mod  wrapper.go
additional_references/jeog_adapter/: README.md  build.sh  jeog_adapter.cpp
additional_references/jiang_adapter/: HarnessJiang.java  README.md  build.sh  jiang_adapter.cpp
additional_references/jlob_adapter/: HarnessJlob.java  README.md  build.sh  jlob_adapter.cpp
additional_references/jxm35_adapter/: README.md  build.sh  jxm35_adapter.cpp
additional_references/kautenja_adapter/: README.md  build.sh  kautenja_adapter.cpp
additional_references/limitbook_adapter/: README.md  build.sh
additional_references/limitbook_adapter/wrapper/: Cargo.toml
additional_references/limitbook_adapter/wrapper/src/: lib.rs
additional_references/llc993_adapter/: README.md  build.sh  llc993_adapter.rs
additional_references/llc993_adapter/wrapper/: Cargo.toml
additional_references/lobster_adapter/: README.md  build.sh  lobster_adapter.rs
additional_references/lobster_adapter/wrapper/: Cargo.toml
additional_references/mansoor_adapter/: README.md  build.sh  mansoor_adapter.cpp
additional_references/matchingo_adapter/: README.md  build.sh
additional_references/matchingo_adapter/wrapper/: go.mod  go.sum  wrapper.go
additional_references/oceanbook_adapter/: README.md  build.sh
additional_references/oceanbook_adapter/wrapper/: go.mod  go.sum  wrapper.go
additional_references/orderbookrs_adapter/: README.md  build.sh  pricelevel-pricetime.patch
additional_references/orderbookrs_adapter/wrapper/: .gitignore  Cargo.toml
additional_references/orderbookrs_adapter/wrapper/src/: lib.rs
additional_references/pgellert_adapter/: README.md  build.sh
additional_references/pgellert_adapter/wrapper/: Cargo.toml
additional_references/pgellert_adapter/wrapper/examples/: repro.rs  verify_fix.rs
additional_references/pgellert_adapter/wrapper/src/: algos.rs  lib.rs
additional_references/pgellert_adapter/wrapper/src/algos/: book.rs  optimised_fifo.rs
additional_references/philipgreat_adapter/: README.md  build.sh
additional_references/philipgreat_adapter/wrapper/: Cargo.toml
additional_references/philipgreat_adapter/wrapper/src/: lib.rs
additional_references/piyush_adapter/: README.md  build.sh  piyush_adapter.cpp
additional_references/pyme_adapter/: README.md  build.sh  pyme_adapter.cpp  pyme_driver.py
additional_references/pyxchange_adapter/: README.md  build.sh  pyxchange_adapter.cpp
additional_references/ridulfo_adapter/: README.md  build.sh  ridulfo_adapter.cpp  ridulfo_helper.py
additional_references/robaho_adapter/: README.md  build.sh  robaho_adapter.cpp
additional_references/techieboy_adapter/: README.md  build.sh  patch_engine.py  techieboy_adapter.rs
additional_references/techieboy_adapter/wrapper/: Cargo.toml
additional_references/trademacher_adapter/: HarnessTradeMacher.java  README.md  build.sh  trademacher_adapter.cpp
additional_references/tzadiko_adapter/: README.md  build.sh  tzadiko_adapter.cpp
api/: matching_engine_api.h
docs/: ANTI_CHEAT.md  CONFORMANCE.md  INTEGRATION.md  METHODOLOGY.md  PATCHES.md
patches/: quantcup.patch
reference/: correctness_hash.txt
scripts/: build_baselines.sh  compare_results.py  conformance_check.py  explain_divergence.py  run_challenge.py
src/: audit.cpp  correctness.cpp  harness.cpp  harness.h  platform.cpp  transport.cpp
tests/: cheat_adapter.cpp  prebuild_insert_cheat.cpp  query_drain_cheat.cpp  shadow_prematch_cheat.cpp  test_explain_divergence.py  test_sha256.c
workload/: generator.cpp  scenarios.json  seeds.txt
(+1 files in other folders)
