[package]
name = "dgtony_adapter"
version = "0.1.0"
edition = "2021"
publish = false

# Pure-Rust cdylib. Exposes the harness ABI defined in
# api/matching_engine_api.h as `#[no_mangle] pub extern "C"` symbols, calling
# straight into dgtony/orderbook-rs's `orderbook` crate.
[lib]
name = "dgtony_adapter"
crate-type = ["cdylib"]
# The adapter source is the single file at the adapter-dir root
# (dgtony_adapter.rs), kept beside build.sh / README.md (the robaho_adapter
# "source at the adapter root" convention). It is the crate root directly — its
# module-level `//!` docs require that — so `path` points up out of wrapper/.
path = "../dgtony_adapter.rs"

[dependencies]
# The whole engine is a single crate (`orderbook`); its src/lib.rs re-exports
# Orderbook / OrderSide / Success / Failed at the crate root, which is the only
# surface the adapter uses. Committed as the default third_party path; build.sh
# rewrites it only when ME_DGTONY_SRC overrides the checkout location.
orderbook = { path = "../../../third_party/dgtony-orderbook-rs" }

# Keep this crate OUT of any ancestor [workspace] so a `cargo build` here
# compiles exactly the engine crate + this adapter and nothing else. The engine
# declares no workspace and has no other crates, but the empty table makes the
# isolation explicit and robust against the adapter dir being nested under one.
[workspace]

# No [profile.release] overrides. House rule for Rust adapters: plain
# `cargo build --release` plus RUSTFLAGS="-C target-cpu=native" (set by
# build.sh), and nothing more unless the ENGINE's own Cargo.toml prescribes it.
# The engine declares no [profile.release], so neither do we.
