[package]
name = "limitbook_adapter"
version = "0.1.0"
edition = "2021"
publish = false

# Pure-Rust cdylib. Exposes the harness ABI defined in
# api/matching_engine_api.h as `#[no_mangle] pub extern "C"` symbols.
[lib]
name = "limitbook_adapter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Default checkout path; build.sh hard-resets it to the pinned SHA, and swaps
# the path (restoring on exit) when ME_LIMITBOOK_SRC overrides the checkout.
limitbook = { path = "../../../third_party/limitbook" }
# limitbook's public API is in rust_decimal::Decimal; we construct/inspect
# prices through the same crate version cargo resolves for the engine's
# rust_decimal = "1.37.2" requirement (one unified version in Cargo.lock —
# Decimal type identity across the boundary is enforced by the compiler).
rust_decimal = "1.37"

# No [profile.release] overrides. House rule for Rust adapters: plain
# `cargo build --release` plus RUSTFLAGS="-C target-cpu=native" (set by
# build.sh), and nothing more unless the ENGINE's own Cargo.toml prescribes
# it. limitbook/Cargo.toml declares no [profile.release], so neither do we.
