[package]
name = "orderbookrs_adapter"
version = "0.1.0"
edition = "2021"
publish = false

# Pure-Rust cdylib. Exposes the harness ABI defined in
# api/matching_engine_api.h as `#[no_mangle] pub extern "C"` symbols.
[lib]
name = "orderbookrs_adapter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Committed as the default third_party path; build.sh rewrites it only when
# ME_ORDERBOOKRS_SRC overrides the checkout location.
orderbook-rs = { path = "../../../third_party/OrderBook-rs" }
pricelevel = "0.7"

# No [profile.release] overrides. House rule for Rust adapters: plain
# `cargo build --release` plus RUSTFLAGS="-C target-cpu=native" (set by
# build.sh), and nothing more unless the ENGINE's own Cargo.toml prescribes
# it. OrderBook-rs declares no [profile.release], so neither do we.
