[package]
name = "orderbookrs_adapter"
version = "0.1.0"
edition = "2021"
publish = false

# Pure-Rust cdylib. Exposes the harness ABI defined in
# api/matching_engine_api.h as `#[no_mangle] pub extern "C"` symbols.
[lib]
name = "orderbookrs_adapter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Committed as the default third_party path; build.sh rewrites it only when
# ME_ORDERBOOKRS_SRC overrides the checkout location.
orderbook-rs = { path = "../../../third_party/OrderBook-rs" }
pricelevel = "0.7"

# No [profile.release] overrides. House rule for Rust adapters: plain
# `cargo build --release` plus RUSTFLAGS="-C target-cpu=native" (set by
# build.sh), and nothing more unless the ENGINE's own Cargo.toml prescribes
# it. OrderBook-rs declares no [profile.release], so neither do we.

# Engine-source correctness fix (filed upstream as
# https://github.com/joaquinbejar/OrderBook-rs/issues/88; see CORRECTNESS_FINDINGS.md):
# OrderBook-rs does
# its per-level matching in the `pricelevel` crate, which on a partial fill
# re-queues the maker's residual at the TAIL of the level FIFO, demoting it
# behind later same-price arrivals (a price-time-priority violation). build.sh
# materializes a pristine pricelevel-0.7.0 under ./pricelevel-patched, applies
# pricelevel-pricetime.patch (front-requeue fix), and this [patch.crates-io]
# substitutes that patched copy for the crates.io `pricelevel` everywhere it is
# used — both this wrapper's direct dep AND OrderBook-rs's transitive dep — so
# the shipped engine is the conforming "with fix" engine. The path dir is
# created by build.sh (git-ignored); a fresh checkout has nothing here until
# build.sh runs.
[patch.crates-io]
pricelevel = { path = "pricelevel-patched" }
